kubernetes/canary/preview/services.yml
apiVersion: v1
kind: Service
metadata:
  name: canary
  namespace: angular-days-2021-canary-preview
spec:
  selector:
    app: frontend-v2
  ports:
    - port: 8080
      targetPort: 80
