kubernetes/canary/preview/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: angular-days-2021-canary-preview
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "User-Agent"
    nginx.ingress.kubernetes.io/canary-by-header-pattern: "Edg"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - canary.thinktecture-demos.com
    secretName: letsencrypt-tls
  rules:
    - host: canary.thinktecture-demos.com
      http:
        paths:
          - path: /
            backend:
              serviceName: canary
              servicePort: 8080
